
project(firmwares)

set(${PROJECT_NAME}_NAMES
  afhds3
  adjustmentreference
  boards
  curvedata
  curvereference
  customfunctiondata
  customisation_data
  datahelpers
  eeprominterface
  generalsettings
  gvardata
  input_data
  flightmodedata
  heli_data
  logicalswitchdata
  mixdata
  modeldata
  moduledata
  multiprotocols
  output_data
  radiodata
  radiodataconversionstate
  rawsource
  rawswitch
  sensordata
  telem_data
  timerdata
  ersky9x/ersky9xeeprom
  ersky9x/ersky9xinterface
  opentx/opentxeeprom
  opentx/opentxinterface
  edgetx/edgetxinterface
  edgetx/yaml_calibdata
  edgetx/yaml_curvedata
  edgetx/yaml_customfunctiondata
  edgetx/yaml_expodata
  edgetx/yaml_generalsettings
  edgetx/yaml_logicalswitchdata
  edgetx/yaml_mixdata
  edgetx/yaml_modeldata
  edgetx/yaml_moduledata
  edgetx/yaml_ops
  edgetx/yaml_rawsource
  edgetx/yaml_rawswitch
  edgetx/yaml_screendata
  edgetx/yaml_sensordata
  edgetx/yaml_switchconfig
  edgetx/yaml_trainerdata
)

AddHeadersSources()

add_library(${PROJECT_NAME}
  ${${PROJECT_NAME}_HDRS}
  ${${PROJECT_NAME}_SRCS}
)

target_link_libraries(${PROJECT_NAME}
  ${CPN_COMMON_LIB}
  yaml-cpp
)

target_include_directories(${PROJECT_NAME}
  PRIVATE
    ${CMAKE_SOURCE_DIR}
    ${CMAKE_CURRENT_BINARY_DIR}
    ${COMPANION_SRC_DIRECTORY}/thirdparty/yaml-cpp/include
  PUBLIC
    "${CMAKE_CURRENT_LIST_DIR}"
    "${CMAKE_CURRENT_LIST_DIR}/er9x"
    "${CMAKE_CURRENT_LIST_DIR}/ersky9x"
    "${CMAKE_CURRENT_LIST_DIR}/opentx"
    "${CMAKE_CURRENT_LIST_DIR}/edgetx"
)
